# axiom-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/axiom_cli/: main.py
src/axiom_cli/commands/: doctor.py  init.py  install.py  new.py  status.py  update.py
src/axiom_cli/core/: agents.py  config.py  docker.py  git.py  repos.py  skills.py
src/axiom_cli/ui/: console.py
tests/: test_commands.py
